8318053: GenShen: Control thread may ignore requests to start concurrent GC

Reviewed-by: kdnilsen, ysr